--- a/.env
+++ b/.env
@@ -10,17 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=afraalian_backend2
-DB_USERNAME=root
-DB_PASSWORD=
-
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=afraalia_database
-# DB_USERNAME=afraalia_afraalian
-# DB_PASSWORD="+!nV,sU9#DH="
-
+DB_DATABASE=afraalia_database
+DB_USERNAME=afraalia_afraalian
+DB_PASSWORD="+!nV,sU9#DH="
 
 HTML_MINIFY = true
 
