install RayeganSMS pakage

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
+        "trez/raygan-sms": "^2.0",
         "unisharp/laravel-filemanager": "^2.2"
     },
     "require-dev": {
