run sms service

--- a/.env
+++ b/.env
@@ -57,3 +57,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+RAYGANSMS_USERNAME=milad1212
+RAYGANSMS_PASSWORD=09116923102
+RAYGANSMS_PHONE_NUMBER=09935622520
