--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "webpack-cli": "^4.5.0"
     },
     "dependencies": {
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@inertiajs/inertia": "^0.10.1",
+        "@inertiajs/inertia-vue3": "^0.5.2",
         "loder": "^1.0.4",
         "path": "^0.12.7",
         "stream": "0.0.2",
